# playlist

./: .env.example  Makefile  README.md  pyproject.toml
common/: __init__.py  exception.py  handler.py  mediator.py  uow.py
deploy/: .env.example  Dockerfile  docker-compose.yml
playlist/: constants.py  settings.py
playlist/adapters/: mediator.py
playlist/adapters/di/: container.py
playlist/adapters/grpc/: bootstrap.py  exc_handlers.py  interceptors.py
playlist/adapters/grpc/protos/: exc.proto  (+3 more)
playlist/adapters/mediator/: __init__.py  factory.py  mediator.py
playlist/adapters/memory/: cache.py  fake_uow.py  playlist_repo_impl.py  reader.py  repo.py
playlist/adapters/sqlalchemy/: alembic.ini  factories.py  models.py  reader.py  repo.py  uow.py
playlist/application/handlers/: create_playlist.py  create_song.py  delete_playlist.py  delete_song.py  get_playlist.py  get_song.py  next_song.py  pause_song.py  play_song.py  prev_song.py  update_song.py
playlist/application/protocols/: __init__.py  playlist_cache.py  playlist_reader.py  playlist_repo.py
playlist/config/: __init__.py  logging_config.ini  settings.py
playlist/domain/: entities.py  exceptions.py
tests/: conftest.py
tests/adapters/: test_cache.py
tests/adapters/sqlalchemy/: test_repo.py
tests/application/: test_handlers.py
tests/domain/: test_playlist.py
tests/fixtures/: __init__.py  grpc.py  in_memory.py  sqlalchemy.py
tests/grpc/: test_playlist_service.py  test_services.py  test_services_errors.py
tests/unit/application/: test_handlers.py
tests/unit/domain/: test_playlist.py
(+11 files in other folders)
